UX-1010 fix alignment of user selector pills

--- a/_scss/components/custom-selector.scss
+++ b/_scss/components/custom-selector.scss
@@ -115,7 +115,6 @@
 }
 
 .user-activity-search-status {
-  line-height: 18px;
-  height: 34px;
-  padding: 2px 0;
+  line-height: 32px;
+  color: #ccc;
 }
